# OpenInsiderAI

./: README.md  dataset.py  linear_model.py  model.py  model_eval.py  open_insider.py  pyproject.toml  yahoo_api_calls.py
gru_model/: gru_model_scaled.pth  gru_model_train.py  learned_on_all_data.pth  pyproject.toml
models/: CRM_22.28.pth  LEG_9.85.pth  MORN_9.40.pth
