[tool.poetry]
name = "openinsiderai"
version = "0.1.0"
description = "AI to hack markets and make money"
authors = ["Radek <radoslaw0mazur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
torchvision = {version = "^0.20.1+rocm6.2", source = "python-torch-rocm"}
torchaudio = {version = "^2.5.1+rocm6.2", source = "python-torch-rocm"}
torch = {version = "^2.5.1+rocm6.2", source = "python-torch-rocm"}
pytorch-triton-rocm = {version = "^3.1.0", source = "python-torch-rocm"}
requests = "^2.32.3"
tqdm = "^4.67.1"
yfinance = "^0.2.51"
isoweek = "^1.3.3"
pandas-datareader = "^0.10.0"
optuna = "^4.1.0"
torchinfo = "^1.8.0"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"


[[tool.poetry.source]]
name = "python-torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
